; lib/dune

; 1. 定义 menhir 解析器。这是一个独立的、顶级的配置块。
; Dune 会用它来处理 parser.mly 和 lexer.mll 文件。
(menhir
 (modules parser))

; 2. 定义库。这也是一个独立的、顶级的配置块。
; Dune 会自动把当前目录下的所有模块 (包括上面 menhir 生成的 parser)
; 都打包到名为 toyc_compiler 的库中。
(library
 (name toyc_compiler)
 ; (public_name toyc_compiler) ; 如果你想让bin/main.ml能方便地调用，可以加上这行
)